Code optimizations for reporting

--- a/test_junkie/reporter/report_template.html
+++ b/test_junkie/reporter/report_template.html
@@ -57,7 +57,7 @@
       <div class="card blue-grey darken-3 absolute_cards">
         <div class="card-content white-text">
           <span class="card-title">Average MEM</span>
-          <div class="absolute_value"><b>{average_memory}%</b></div>
+          <div class="absolute_value"><b>{average_mem}%</b></div>
         </div>
       </div>
     </div>
